examples/invalid/68_trailing_sequential_semicolon.lane
// invalid: a block must retain one final expression after sequential items
module Examples.Invalid68

pub fn bad() -> Unit {
  ();
}
